# Sem2_DS_Assignment

./: LICENSE  README.md  ZG536_FDS_Assignment1_2025MNXXXX.ipynb  pyproject.toml
data/pharma_sales_data/cleaned/: salesdaily_cleaned.csv  salesdaily_enriched.csv
